[project]
name = "promplate-py-docs"
version = "1"
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python~=2.0.1",
    "brotli>=1.1.0",
    "minify-html>=0.15.0",
    "promplate~=0.3.5.6",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "mkdocs serve --dirtyreload"
minify = { call = "scripts.minify:main" }
inject = { call = "scripts.inject:main" }
gen = { composite = ["inject", "mkdocs build", "minify"] }
