[project]
name = "promplate-py-docs"
version = "1"
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings-python~=2.0.3",
    "brotli>=1.2.0",
    "minify-html>=0.18.1",
    "promplate~=0.3.5.6",
    "mkdocs-llmstxt~=0.5.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "mkdocs serve --dirtyreload"
minify = { call = "scripts.minify:main" }
patch = { call = "scripts.patch:main" }
gen = { composite = ["mkdocs build", "patch", "minify"] }
